[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/Gun/Gun.gd" type="Script" id=1]

[sub_resource type="CubeMesh" id=1]

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0.956863, 0.0901961, 0.352941, 1 )

[node name="Gun" type="Spatial"]
script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 0.100865, 0, 0, 0, 0.0705799, 0, 0, 0, 0.566446, 0, 0, -0.0811448 )
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="barrel_end" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.905652 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2

[connection signal="shoot" from="." to="." method="_on_Gun_shoot"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
